Use getDeclaredConstructor().newInstance()
This allows some compile-time checks to be performed by the compiler. In
this instance we don't do anything with the failure.

See http://errorprone.info/bugpattern/ClassNewInstance for more info.